--- a/php/register.html
+++ b/php/register.html
@@ -37,7 +37,7 @@
                     </span>
     
                     <div class="wrap-input100 rs1-wrap-input100 validate-input" data-validate="Name is required">
-                            <span class="label-input100">Nom *</span>
+                            <span class="label-input100">Name *</span>
                             <input class="input100" type="text" name="nom" placeholder="Nom de Projet">
                         </div>
 
